--- a/views/layouts/dashboard/sections/external-links.ejs
+++ b/views/layouts/dashboard/sections/external-links.ejs
@@ -34,17 +34,17 @@
           </a>
         </li>
         <li class="mt-2">
-          <a class="flex items-center text-blue-700 dark:text-gray-100" href="/department-create-101"
+          <a class="flex items-center text-blue-700 dark:text-gray-100" href="/credits"
             target="_blank">
             <svg width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="currentColor"
               class="transform transition-transform duration-500 ease-in-out">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"></path>
             </svg>
-            <span class="inline-flex pl-2">Your Department Page</span>
+            <span class="inline-flex pl-2">Credits</span>
           </a>
         </li>
-        <li class="mt-2">
+        <!-- <li class="mt-2">
           <a class="flex items-center text-blue-700 dark:text-gray-100" href="/staff-register" target="_blank">
             <svg width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="currentColor"
               class="transform transition-transform duration-500 ease-in-out">
@@ -53,8 +53,8 @@
             </svg>
             <span class="inline-flex pl-2">Register</span>
           </a>
-        </li>
-        <li class="mt-2">
+        </li> -->
+        <!-- <li class="mt-2">
           <a class="flex items-center text-blue-700 dark:text-gray-100" href="/event-create-101" target="_blank">
             <svg width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="currentColor"
               class="transform transition-transform duration-500 ease-in-out">
@@ -63,7 +63,7 @@
             </svg>
             <span class="inline-flex pl-2">Recent Event Page</span>
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
