--- a/views/layouts/dashboard/sections/profile-form.ejs
+++ b/views/layouts/dashboard/sections/profile-form.ejs
@@ -1,6 +1,6 @@
 <div class="mt-8">
   <form action="/dashboard/profile/edit" method="POST" class="p-6 flex flex-col justify-center">
-    <span class="text-xl mb-5 md:w-1/5 text-center text-white mx-auto font-bold bg-blue-600 p-2 rounded">
+    <span class="text-3xl mb-5 md:w-1/5 text-center text-gray-800 mx-auto font-bold p-2 rounded">
       Edit Profile
     </span>
     <div class="flex flex-col">
