--- a/views/layouts/dashboard/sections/sidebar.ejs
+++ b/views/layouts/dashboard/sections/sidebar.ejs
@@ -142,7 +142,7 @@
             </li>
             <li class="px-5 hidden md:block">
               <div class="flex flex-row items-center mt-5 h-8">
-                <div class="text-sm font-light tracking-wide text-gray-400 uppercase">Settings</div>
+                <div class="text-sm font-light tracking-wide text-gray-400 uppercase">Profile</div>
               </div>
             </li>
             <li>
@@ -155,11 +155,11 @@
                       d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
                   </svg>
                 </span>
-                <span class="ml-2 text-sm tracking-wide truncate">Profile</span>
+                <span class="ml-2 text-sm tracking-wide truncate">Edit</span>
               </a>
             </li>
             <li>
-              <a href="#"
+              <!-- <a href="#"
                 class="relative flex flex-row items-center h-11 focus:outline-none duration-200 hover:bg-blue-800 dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
                 <span class="inline-flex justify-center items-center ml-4">
                   <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
@@ -172,7 +172,7 @@
                   </svg>
                 </span>
                 <span class="ml-2 text-sm tracking-wide truncate">Settings</span>
-              </a>
+              </a> -->
             </li>
           </ul>
           <p class="mb-14 px-5 py-3 hidden md:block text-center text-xs">E-Cell, GNDEC &#169; 2021</p>
