--- a/views/layouts/dashboard/sections/department-edit-form.ejs
+++ b/views/layouts/dashboard/sections/department-edit-form.ejs
@@ -37,14 +37,14 @@
           type="text" placeholder="Department Tagline"><%= dept.description %></textarea>
       </div>
 
-      <div class="grid grid-cols-1 font-bold uppercase mt-5 mx-7 text-gray-600 justify-center" x-data="{toggle: '0'}">
-        Recruiting - <%= dept.recruiting %>
+      <div class="grid grid-cols-1 font-bold uppercase mt-5 mx-7 text-gray-600 justify-center" x-data="{toggle: '<%= dept.recruiting ? "1" : "0" %>'}">
+        Recruiting
           <div class="relative rounded-full w-12 h-6 transition duration-200 ease-linear"
             :class="[toggle === '1' ? 'bg-green-400' : 'bg-gray-400']">
             <label for="toggle"
               class="absolute left-0 bg-white border-2 mb-2 w-6 h-6 rounded-full transition transform duration-100 ease-linear cursor-pointer"
               :class="[toggle === '1' ? 'translate-x-full border-green-400' : 'translate-x-0 border-gray-400']"></label>
-            <input type="checkbox" id="toggle" name="featured"
+            <input type="checkbox" id="toggle" name="recruiting"
               class="appearance-none w-full h-full active:outline-none focus:outline-none"
               @click="toggle === '0' ? toggle = '1' : toggle = '0'" />
           </div>
