--- a/views/layouts/home/sections/video-stats.ejs
+++ b/views/layouts/home/sections/video-stats.ejs
@@ -24,22 +24,20 @@
               <h3 class="text-4xl font-bold">Cool facts<span class="font-normal"> about our
                   organization</span></h3>
             </div>
-            <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod
-              tempor
-              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+            <p class="text">We at Entrepreneurship Cell, GNDEC always try to aim for perfection in our events, and guiding budding entrepreneurs. Get a chance work with the innovative, creative, and hardworking individuals</p>
           </div>
           <div class="flex flex-col items-center md:flex-row md:justify-between mt-12">
             <div
               class="flex transform duration:200 transition ease-in mb-4 hover:-translate-y-2 items-center justify-center sm:mb-5  h-28 w-28 from-purple-700 to-red-200 bg-gradient-to-br rounded-lg counter-color-1">
               <div class="text-center counter-items">
-                <span class="text-2xl font-bold text-white"><span class="counter">10</span>K+</span>
+                <span class="text-2xl font-bold text-white"><span class="counter">5</span>K+</span>
                 <p class="text-white">Participants</p>
               </div>
             </div>
             <div
               class="flex transform duration:200 transition ease-in mb-4 hover:-translate-y-2 items-center justify-center mx-1 sm:mb-5  h-28 w-28 from-red-700 to-yellow-200 bg-gradient-to-br rounded-lg counter-color-2">
               <div class="text-center counter-items">
-                <span class="text-2xl font-bold text-white"><span class="counter">200</span>+</span>
+                <span class="text-2xl font-bold text-white"><span class="counter">20</span>+</span>
                 <p class="text-white">Events</p>
               </div>
             </div>
