Whitespace issue resolved

--- a/views/layouts/home/event-page.ejs
+++ b/views/layouts/home/event-page.ejs
@@ -4,7 +4,7 @@
   <%- include("./partials/head-links.ejs") %>
 </head>
 
-<body class="bg-white">
+<body class="bg-white h-full">
   <!-- header + navbar -->
   <%- include("./sections/header-nav.ejs") %>
 
@@ -13,7 +13,7 @@
   <!-- All Events Type -->
 
   <!-- Footer Section -->
-  <footer id="footer" class="relative z-10 footer-area pt-2">
+  <footer id="footer" class="relative z-10 footer-area">
     <div class="footer-bg" style="background-image: url(/img/footer-bg.svg);"></div>
     <div class="container">
       <!-- Event suggestion form Section -->
