--- a/views/layouts/home/sections/vision.ejs
+++ b/views/layouts/home/sections/vision.ejs
@@ -1,5 +1,5 @@
 <section id="vision" class="text-gray-600 body-font">
-  <div class="container mx-auto flex px-5 py-16 md:flex-row flex-col items-center">
+  <div class="container mx-auto flex px-5 py-16 md:flex-row flex-col-reverse items-center">
     <div class="wow fadeIn lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0" data-wow-duration="1s" data-wow-delay="0.7s">
       <img class="object-cover object-center rounded" alt="Technical" src="/img/department_achievements.png">
     </div>
