Event pics design issue fixed

--- a/views/layouts/auth/staff-login.ejs
+++ b/views/layouts/auth/staff-login.ejs
@@ -84,6 +84,9 @@
                                     <%= success %>
                                 </span>
                             </div>
+                            <div class="flex justify-center text-white">
+                                <p>New Here? <a class="text-red-200" href="/staff-register">Register</a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
