--- a/views/layouts/auth/staff-register.ejs
+++ b/views/layouts/auth/staff-register.ejs
@@ -171,6 +171,9 @@
                                         <%= success %> 
                                     </span>
                                 </div>
+                                <div class="flex justify-center text-white">
+                                    <p>Already Registered? <a class="text-red-200" href="/staff-login">Login Here</a></p>
+                                </div>
                             </form>
                         </div>
                     </div>
