--- a/views/layouts/home/archived-events.ejs
+++ b/views/layouts/home/archived-events.ejs
@@ -32,7 +32,7 @@
                 class="p-4 layered-card border-2 border-transparent hover:border-purple-300 bg-white transition ease-in max-w-xl rounded flex justify-start md:flex-row flex-col gap-4">
                 <img
                     src="<%= archivedEvents[i].event_pic %>"
-                    class="rounded bg-contain justify-center items-center my-auto md:w-auto md:max-h-40" />
+                    class="rounded bg-contain justify-center items-center my-auto h-48 w-56" />
                 <div class="relative">
                 </div>
                 <div class="flex flex-col space-y-8">
