hero section ammendments

--- a/views/layouts/home/live-events.ejs
+++ b/views/layouts/home/live-events.ejs
@@ -17,7 +17,7 @@
         data-wow-delay="0.5s">
 
         <!-- Heading -->
-        <div class="pt-3 mx-4 mt-12 h-auto">
+        <div class="pt-3 mx-4 mt-28 2xl:mt-36 xl:mt-36 h-auto">
             <div class="section-title text-center">
                 <div class="m-auto line"></div>
                 <div>
