--- a/views/layouts/home/sections/collective-events.ejs
+++ b/views/layouts/home/sections/collective-events.ejs
@@ -1,5 +1,5 @@
 <!--Event page starts  -->
-<div class="my-5">
+<div class="my-5 md:mt-52">
   <% if (featured.length > 0 || live.length > 0 || ongoing.length > 0 || upcoming.length > 0 || archived.length > 0) { %> 
   <!--FEATURED EVENTS-->
   <% if (featured.length > 0) { %>
