--- a/views/layouts/home/sections/credits-team.ejs
+++ b/views/layouts/home/sections/credits-team.ejs
@@ -121,10 +121,16 @@
                         <div class="w-full font-bold text-xl text-gray-600 px-6">Front End Team</div>
                     </a>
                 </div>
-                <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+                <div class="h-28 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
                     <div class="flex items-center justify-center">		
                         <a href="https://www.instagram.com/_i_abhi.nav/" class="text-gray-600 text-lg md:text-md mr-6 hover:text-pink-500 duration-200"><i class="fab text-4xl fa-instagram"></i></a>
                         <a href="http://www.linkedin.com/in/kumar-abhinav-596b27188" class="text-gray-600 text-lg md:text-md ml-6 hover:text-blue-500 duration-200"><i class="fab text-4xl fa-linkedin-in"></i></a>
+                        <div class="flex  justify-center mt-2">
+                            <div
+                              class="pill bg-gray-100 text-gray-700 rounded-full text-xl font-bold px-4 mr-2  py-1">
+                              #HTMLCSSEXPERT
+                            </div>
+                        </div>              
                     </div>
                 </div>
             </div>
@@ -139,10 +145,16 @@
                         <div class="w-full font-bold text-center text-xl text-gray-600 px-6">Back End Team</div>
                     </a>
                 </div>
-                <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+                <div class="h-28 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
                     <div class="flex items-center justify-center">		
                         <a href=" https://www.instagram.com/ekam.s_/" class="text-gray-600 text-lg md:text-md mr-6"><i class="fab text-4xl fa-instagram hover:text-pink-500 duration-200"></i></a>
                         <a href="http://linkedin.com/in/ekamjot-singh-53873019a" class="text-gray-600 text-lg md:text-md ml-6 hover:text-blue-500 duration-200"><i class="fab text-4xl fa-linkedin-in"></i></a>
+                        <div class="flex  justify-center mt-2">
+                            <div
+                              class="pill bg-gray-100 text-gray-700 rounded-full text-xl font-bold px-4 mr-2  py-1">
+                              #FORMTESTER
+                            </div>
+                        </div>              
                     </div>
                 </div>
             </div>
@@ -157,10 +169,16 @@
                         <div class="w-full font-bold text-xl text-center text-gray-600 px-6">Front End Team</div>
                     </a>
                 </div>
-                <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+                <div class="h-28 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
                     <div class="flex items-center justify-center">		
                         <a href="https://www.instagram.com/_vanshika__.15/" class="text-gray-600 text-lg md:text-md mr-6 hover:text-pink-500 duration-200"><i class="fab text-4xl fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/vanshika-sanan-b50716194" class="text-gray-600 text-lg md:text-md ml-6 hover:text-blue-500 duration-200"><i class="fab text-4xl fa-linkedin-in"></i></a>
+                        <div class="flex  justify-center mt-2">
+                            <div
+                              class="pill bg-gray-100 text-gray-700 rounded-full text-xl font-bold px-4 mr-2  py-1">
+                              #CONTENTMANAGER
+                            </div>
+                        </div>              
                     </div>
                 </div>
             </div>
@@ -180,6 +198,12 @@
                         <a href="https://www.facebook.com/profile.php?id=100015425195332" href="" class="text-gray-600 text-lg md:text-md hover:text-blue-800 duration-200"><i class="fab text-4xl fa-facebook-square"></i></a>
                         <a href="https://instagram.com/whytanisha?utm_medium=copy_link" href="" class="text-gray-600 text-lg md:text-md mx-12 hover:text-pink-500 duration-200"><i class="fab text-4xl fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/tanisha-choudhary-6081971ba" href="" class="text-gray-600 text-lg md:text-md hover:text-blue-500 duration-200"><i class="fab text-4xl fa-linkedin-in"></i></a>
+                        <div class="flex  justify-center mt-2">
+                            <div
+                              class="pill bg-gray-100 text-gray-700 rounded-full text-xl font-bold px-4 mr-2  py-1">
+                              #DESIGNANDLAYOUTEXPERT
+                            </div>
+                        </div>              
                     </div>
                 </div>
             </div>
@@ -194,11 +218,17 @@
                         <div class="w-full font-bold text-center text-xl text-gray-600 px-6">Back End Team</div>
                     </a>
                 </div>
-                <div class="h-20 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
+                <div class="h-28 flex-none mt-auto bg-white rounded-lg rounded-t-none overflow-hidden shadow-lg p-6">
                     <div class="flex items-center justify-center">		
                         <a href="https://github.com/Manbir-ss" class="text-gray-600 text-lg md:text-md hover:text-gray-900 duration-200"><i class="fab text-4xl fa-github-square"></i></a>
                         <a href="https://www.instagram.com/manbir_seehra/" class="text-gray-600 text-lg md:text-md mx-12 hover:text-pink-500 duration-200"><i class="fab text-4xl fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/manbir-singh-2245b71b7" class="text-gray-600 text-lg md:text-md hover:text-blue-500 duration-200"><i class="fab text-4xl fa-linkedin-in"></i></a>
+                        <div class="flex  justify-center mt-2">
+                            <div
+                              class="pill bg-gray-100 text-gray-700 rounded-full text-xl font-bold px-4 mr-2  py-1">
+                              #JSONMANAGER
+                            </div>
+                        </div>              
                     </div>
                 </div>
             </div>
@@ -218,6 +248,12 @@
                         <a href="https://www.facebook.com/sejalmadan21" class="text-gray-600 text-lg md:text-md hover:text-blue-800 duration-200"><i class="fab text-4xl fa-facebook-square"></i></a>
                         <a href="https://instagram.com/sejalmadann?utm_medium=copy_link" class="text-gray-600 text-lg md:text-md mx-12 hover:text-pink-500 duration-200"><i class="fab text-4xl fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/sejal-madan-a836021b9" class="text-gray-600 text-lg md:text-md hover:text-blue-500 duration-200"><i class="fab text-4xl fa-linkedin-in"></i></a>
+                        <div class="flex  justify-center mt-2">
+                            <div
+                              class="pill bg-gray-100 text-gray-700 rounded-full text-xl font-bold px-4 mr-2  py-1">
+                              #COLORSCHEMEEXPERT
+                            </div>
+                        </div>              
                     </div>
                 </div>
             </div>
