--- a/views/layouts/home/archived-events.ejs
+++ b/views/layouts/home/archived-events.ejs
@@ -12,12 +12,12 @@
   <%- include("./sections/header-nav.ejs") %>
 
     <!--LIVE EVENTS-->
-    <div id="live" class="mt-10" style="margin-top: 120px;">
+    <div id="live" class="mt-16" style="margin-top: 120px;">
     <div class="mt-16 flex flex-col justify-center items-center wow fadeIn" data-wow-duration="1s"
         data-wow-delay="0.5s">
 
         <!-- Heading -->
-        <div class="pt-3 mx-4 mt-12 h-auto">
+        <div class="pt-3 mx-4 mt-16 2xl:mt-44 xl:mt-44 h-auto">
             <div class="section-title text-center">
                 <div class="m-auto line"></div>
                 <div>
