--- a/views/layouts/home/sections/footer-links.ejs
+++ b/views/layouts/home/sections/footer-links.ejs
@@ -46,7 +46,10 @@
               </li>
               <li class="hover:text-red-400 hover:-translate-x-1 transform duration-200"><a
                   href="/staff-login">Login</a></li>
-            </ul>
+                  <li class="hover:text-red-400 hover:-translate-x-1 transform duration-200"><a
+                    href="/credits">Credits</a></li>
+  
+              </ul>
           </div>
         </div>
         <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/2">
