--- a/views/layouts/home/sections/header-nav.ejs
+++ b/views/layouts/home/sections/header-nav.ejs
@@ -344,9 +344,8 @@
               <h2 class="text-3xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
                 data-wow-delay="0.5s">Entrepreneurship Cell</h2>
               <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
-                "Don't let the
-                noise of other's opinions drown out your own inner voice.(Department Tagline)"
-                <br>- Steve Jobs
+                "If you want to build a ship, don’t drum up the men to gather wood, divide the work, and give orders. 
+                Instead, teach them to yearn for the vast and endless sea."              
               </p>
               <a href="#about"
                 class="scroll-page bg-gray-200 text-black hover:bg-white hover:shadow-xl duration-200 p-3 rounded font-semibold wow fadeInUp"
@@ -362,10 +361,8 @@
                 <h2 class="text-4xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
                   data-wow-delay="0.5s">Live Events at E-Cell</h2>
                 <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
-                  "Don't let the
-                  noise of other's opinions drown out your own inner voice.(Department Tagline)"
-                  <br>- Steve Jobs
-                </p>
+                  "Whatever you do, do it well. Do it so well that when people see you do it they will want to come back and see 
+                  you do it again and they will want to bring others and show them how well you do what you do."</p>
               </div>
              <!-- upcoming events -->
              <% } else if (title === "E-Cell | Upcoming Events") { %>
@@ -377,10 +374,7 @@
                 <h2 class="text-4xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
                   data-wow-delay="0.5s">Upcoming Events at E-Cell</h2>
                 <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
-                  "Don't let the
-                  noise of other's opinions drown out your own inner voice.(Department Tagline)"
-                  <br>- Steve Jobs
-                </p>
+                  "The best preparation for tomorrow is doing your best today."</p>
               </div>
              <!-- ongoing events -->
              <% } else if (title === "E-Cell | Ongoing Events") { %>
@@ -392,10 +386,7 @@
                 <h2 class="text-4xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
                   data-wow-delay="0.5s">Ongoing Events at E-Cell</h2>
                 <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
-                  "Don't let the
-                  noise of other's opinions drown out your own inner voice.(Department Tagline)"
-                  <br>- Steve Jobs
-                </p>
+                  "Find that thing you are super passionate about."                </p>
               </div>
                <!-- archived events -->
              <% } else if (title === "E-Cell | Archived Events") { %>
@@ -407,9 +398,7 @@
                 <h2 class="text-4xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
                   data-wow-delay="0.5s">Archived Events at E-Cell</h2>
                 <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
-                  "Don't let the
-                  noise of other's opinions drown out your own inner voice.(Department Tagline)"
-                  <br>- Steve Jobs
+                  "It's fine to celebrate success but it is more important to heed the lessons of failure."
                 </p>
               </div>
             <% } else if (title === "E-Cell | Credits") { %>
@@ -436,10 +425,8 @@
               <h2 class="text-4xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
                 data-wow-delay="0.5s">Events</h2>
               <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
-                "Don't let the
-                noise of other's opinions drown out your own inner voice.(Department Tagline)"
-                <br>- Steve Jobs
-              </p>
+                “Productivity is never an accident. It is always the result of a commitment to excellence, 
+                intelligent planning, and focused effort.”              </p>
               <a href="#feature"
                 class="scroll-page bg-gray-200 text-black hover:bg-white hover:shadow-xl duration-200 p-3 rounded font-semibold wow fadeInUp"
                 data-wow-duration="1.3s" data-wow-delay="1.1s">Explore</a>
@@ -468,10 +455,8 @@
               <h2 class="text-4xl my-4 font-bold text-white header-title wow fadeInUp" data-wow-duration="1.3s"
                 data-wow-delay="0.5s">Departments</h2>
               <p class="mb-8 text-white text text-lg wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
-                "Don't let the
-                noise of other's opinions drown out your own inner voice.(Department Tagline)"
-                <br>- Steve Jobs
-              </p>
+                "Teamwork is the ability to work together toward a common vision. The ability to direct individual accomplishments 
+                toward organizational objectives. It is the fuel that allows common people to attain uncommon results."               </p>
               <a href="#allDepartments"
                 class="scroll-page bg-gray-200 text-black hover:bg-white hover:shadow-xl duration-200 p-3 rounded font-semibold wow fadeInUp"
                 data-wow-duration="1.3s" data-wow-delay="1.1s">Explore</a>
@@ -503,20 +488,37 @@
           </div>
         </div>
         <% } else { %>
-        <div class="justify-center row z-50">
-          <div class="w-full lg:w-2/3">
-            <div class="text-center header-hero-image wow fadeIn" data-wow-duration="1.3s" data-wow-delay="1.4s">
-              <% if (title === "E-Cell | Credits") { %>
-              <img class="rounded-lg mx-auto h-2/3 w-2/3" src="/img/credits_page_4.svg" alt="hero">
-              <% } else if (title.length > "E-Cell | Departments".length && title.substring(0, 20) === "E-Cell | Departments") { %>
-              <img class="rounded-lg mx-auto mt-20 h-2/3 w-2/3" src="<%= foundDept.pic %>" alt="hero">
-              <% } else { %>
-                <img class="rounded-lg mx-auto mt-20 h-2/3 w-2/3" src="/img/hero-steve.jpg" alt="hero"> 
-              <% } %>
+          <div class="justify-center row z-50 lg-mb-40">
+            <div class="w-full h-2/3 w-2/3">
+              <div class="mb-48 text-center header-hero-image wow fadeIn" data-wow-duration="1.3s" data-wow-delay="1.4s">
+                <% if (title === "E-Cell | Credits") { %>
+                    <img class="rounded-lg mx-auto object-scale-down" src="/img/credits_page_4.svg" alt="hero">
+                <% } else if (title === "E-Cell | Departments") { %>
+                    <img class="rounded-lg mx-auto mt-8 md:mt-32 mb-28 h-3/4 w-3/4 lg:h-1/2 lg:w-1/2 xl:h-1/2 xl:w-1/2 2xl:h-1/2 2xl:w-1/2" src="/img/departments.jpeg" alt="hero">
+                <% } else if (title.length > "E-Cell | Departments".length && title.substring(0, 20) === "E-Cell | Departments") { %>
+                    <img class="rounded-lg mx-auto mt-20 object-scale-down h-auto w-1/2" src="<%= foundDept.pic %>" alt="hero">
+                <% } else if (title === "E-Cell | Live Events") { %>
+                  <img class="rounded-lg mx-auto mt-20 mb-28 h-3/4 w-3/4 lg:h-1/2 lg:w-1/2 xl:h-1/2 xl:w-1/2 2xl:h-1/2 2xl:w-1/2" src="/img/upcoming.jpeg" alt="hero">
+                <% } else if (title === "E-Cell | Archived Events") { %>
+                    <img class="rounded-lg mx-auto mt-20 mb-28 h-3/4 w-3/4 lg:h-1/2 lg:w-1/2 xl:h-1/2 xl:w-1/2 2xl:h-1/2 2xl:w-1/2" src="https://www.clipartkey.com/mpngs/m/69-695086_event-organizer-clipart-png.png" alt="hero">
+                <% } else if (title === "E-Cell | Ongoing Events") { %>
+                  <img class="rounded-lg mx-auto mt-20 mb-28 h-3/4 w-3/4 lg:h-1/2 lg:w-1/2 xl:h-1/2 xl:w-1/2 2xl:h-1/2 2xl:w-1/2" src="/img/upcoming.jpeg" alt="hero">
+                <% } else if (title === "E-Cell | Upcoming Events") { %>
+                  <img class="rounded-lg mx-auto mt-20 mb-28 h-3/4 w-3/4 lg:h-1/2 lg:w-1/2 xl:h-1/2 xl:w-1/2 2xl:h-1/2 2xl:w-1/2" src="/img/upcoming.jpeg" alt="hero">
+                  <% } else if (title === "E-Cell | Home") { %>
+                  <div class="lg:max-w-lg mx-auto lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+                  <img class="object-cover object-center rounded lg:h-1/2 lg:w-1/2 2xl:h-1/2 2xl:w-1/2  xl:h-1/2 xl:w-1/2" src="/img/home-hero.jpeg" alt="hero">
+                </div>
+                <% } else if (title === "E-Cell | Events") { %>
+                    <img class="rounded-lg mx-auto mt-20 mb-28 h-3/4 w-3/4 lg:h-1/2 lg:w-1/2 xl:h-1/2 xl:w-1/2 2xl:h-1/2 2xl:w-1/2" src="/img/events.jpeg" alt="hero">
+                <% } else { %>
+                  <img 
+                  class="rounded-lg mx-auto mt-20 h-2/3 w-2/3 object-scale-down" src="/img/hero-steve.jpg" alt="hero"> 
+                <% } %>
+              </div>
             </div>
           </div>
-        </div>
-        <% } %> 
+          <% } %> 
       </div>
       <div id="particles-1" class="particles"></div>
     </div>
