Header image inflation fixed

--- a/views/layouts/dashboard/sections/header.ejs
+++ b/views/layouts/dashboard/sections/header.ejs
@@ -1,7 +1,7 @@
 <div class="fixed w-full flex items-center justify-between h-14 text-white z-10">
   <div
     class="flex items-center justify-start md:justify-center pl-3 w-14 md:w-64 h-14 bg-blue-800 dark:bg-gray-800 border-none">
-    <img class="w-7 h-7 md:w-10 md:h-10 mr-2 rounded-full overflow-hidden" src="<%= staff.profile_pic_url %>" />
+    <img class="w-7 h-7 md:w-10 md:h-10 mr-2 bg-white rounded-full object-contain" src="<%= staff.profile_pic_url %>" />
     <div class="hidden md:flex flex-col">
       <span class="hidden w-32 truncate md:block">
         <%= staff.fullname %>
